# drf-versioning

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
todo/: admin.py  models.py
todo/api/: serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py
utility/: test_resful_versioning.py  versioning.py
